Fixed the padding bottom because it's too big

--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -6,7 +6,7 @@
     background-size: cover;
     background-position: 40% 40%;
     background-repeat: no-repeat;
-    padding-block-end: 256px;
+    padding-block-end: 70.55px;
     padding-block-start: 228px;
     color: $text-color;
 }
@@ -30,6 +30,7 @@
 
 .survive__shopping {
     margin: 0;
+    padding-block-end: 174.69px;
 }
 
 .survive__shopping__card {
